--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to</h1>
-    <h1><span class="name-highlight">Nayamot</span> Website</h1>
+    <section>
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="name-highlight">Nayamot</span> Website</h1>
+            <h3>World-class Propetional WebDevelopper</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias veritatis quisquam facilis distinctio laudantium ex cupiditate. Fugiat explicabo sint porro esse repudiandae! Facere saepe perferendis perspiciatis exercitationem quis corrupti esse?</p>
+        </div>
+        <div class="half-width">
+            <img src="images/profile.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
