--- a/index.html
+++ b/index.html
@@ -9,16 +9,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h1><span class="name-highlight">Nayamot</span> Website</h1>
-            <h3>World-class Propetional WebDevelopper</h3>
+            <h1><span class="orange-highlight">Nayamot</span> Website</h1>
+            <h3>World-class Professional WebDeveloper</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias veritatis quisquam facilis distinctio laudantium ex cupiditate. Fugiat explicabo sint porro esse repudiandae! Facere saepe perferendis perspiciatis exercitationem quis corrupti esse?</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/nayamat-ullah-065818210/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/profile.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become a WebDevelopper</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos harum ut nisi, neque possimus iure quis iste culpa illo nam fugiat, sequi atque illum reprehenderit, delectus aut accusamus debitis aspernatur.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/nayamat-ullah-065818210/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-expeience">
+            <h2>Full stack web Dev</h2>
+            <h3 class="orange-highlight">2021 - Present | Pro Level Web Dev</h3>
+            <p>I am the master of html css & javascript.I know everything needed to make a website function, efficient.I din't stop with the web.I went beyond with most popular javascript framework called vue js.I even know the doployment server & sequerity.I will give you 100% web solution.</p>
+        </div>
+        <div id="baby-web" class="half-width single-expeience">
+            <h2>Baby WebDeveloper</h2>
+            <h3 class="orange-highlight">2020 - 2021 | Programming hero learner</h3>
+            <p>They didn't offer me a job.But i made myself as a remove WebDeveloper.I made their website & showed it to them.They liked it & uploaded the content.It was fun working at programming hero. </p>
+        </div>
+    </section>
+    <footer>
+        <p>@ nayamot 2022,all rights reserved</p>
+    </footer>
 </body>
 </html>
