--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </section>
     <footer>
-        <p>@ nayamot 2022,all rights reserved</p>
+        <p>© nayamot 2022,all rights reserved</p>
     </footer>
 </body>
 </html>
